fix: adjust scale select on mobile

--- a/tldraw/apps/tldraw-logseq/src/styles.css
+++ b/tldraw/apps/tldraw-logseq/src/styles.css
@@ -302,7 +302,6 @@ button.tl-select-input-trigger {
   @apply flex items-center px-3;
   box-shadow: 0 0 0 1px var(--ls-secondary-border-color);
   background-color: var(--ls-secondary-background-color);
-  min-width: 160px;
   border-radius: 8px;
   font-size: 16px;
   height: 100%;
@@ -310,8 +309,7 @@ button.tl-select-input-trigger {
 }
 
 .tl-select-input-trigger-value {
-  @apply flex items-center justify-start flex-1;
-  line-height: 24px;
+  @apply flex items-center justify-start flex-1 mr-1 md:mr-3;
 }
 
 .tl-select-input-viewport {
